examples/mood/tests/fixtures/invalid_enum_variant.mood
enum Boolean {
  True,
  False
}

pub fn test(): i32 {
  Boolean::Maybe;
  10_i32
}